--- a/htdocs/static/css/application.css
+++ b/htdocs/static/css/application.css
@@ -2607,22 +2607,22 @@ header#page_header {
               background-image: url('/static/images/nav-icons/fallbacks/nav_browse.png?1376337970'); }
           /* line 219, ../scss/areas/_header.scss */
           header#page_header nav#main_navigation ul li a#court_cases {
-            background: url('/static/images/nav-icons/nav_court-cases.svg?1376337970'); }
+            background-image: url('/static/images/nav-icons/nav_court-cases.svg?1376337970'); }
             /* line 221, ../scss/areas/_header.scss */
             header#page_header nav#main_navigation ul li a#court_cases:hover {
-              background: url('/static/images/nav-icons/nav_court-cases-hover.svg?1376337970'); }
+              background-image: url('/static/images/nav-icons/nav_court-cases-hover.svg?1376337970'); }
             /* line 224, ../scss/areas/_header.scss */
             .lt-ie9 header#page_header nav#main_navigation ul li a#court_cases {
-              background: url('/static/images/nav-icons/fallbacks/nav_court-cases.png?1376337970'); }
+              background-image: url('/static/images/nav-icons/fallbacks/nav_court-cases.png?1376337970'); }
           /* line 229, ../scss/areas/_header.scss */
           header#page_header nav#main_navigation ul li a#about_us {
-            background: url('/static/images/nav-icons/nav_about-us.svg?1376337970'); }
+            background-image: url('/static/images/nav-icons/nav_about-us.svg?1376337970'); }
             /* line 232, ../scss/areas/_header.scss */
             header#page_header nav#main_navigation ul li a#about_us:hover {
-              background: url('/static/images/nav-icons/nav_about-us-hover.svg?1376337970'); }
+              background-image: url('/static/images/nav-icons/nav_about-us-hover.svg?1376337970'); }
             /* line 235, ../scss/areas/_header.scss */
             .lt-ie9 header#page_header nav#main_navigation ul li a#about_us {
-              background: url('/static/images/nav-icons/fallbacks/nav_about-us.png?1376337970'); }
+              background-image: url('/static/images/nav-icons/fallbacks/nav_about-us.png?1376337970'); }
           /* line 240, ../scss/areas/_header.scss */
           header#page_header nav#main_navigation ul li a#download {
             background-image: url('/static/images/nav-icons/nav_download.svg?1376337970'); }
