Fixing a few bad style merges.

--- a/htdocs/static/scss/areas/_header.scss
+++ b/htdocs/static/scss/areas/_header.scss
@@ -17,8 +17,14 @@
     height: 190px;
   }
 
-  hgroup#virginia_logo {
-    @include background(image-url("faux_seal.png"));
+  @include respond-to(print) {
+    margin: 0;
+    padding: 0;
+    height: 0.5in;
+  }
+
+  hgroup#place_logo {
+    @include background-image(image-url("faux_seal.png"));
     background-repeat: no-repeat;
     background-position: top left;
     background-size: auto;
@@ -116,7 +122,7 @@
         top: 0.22in;
       }
     } //h2
-  } // hgroup#virginia_logo
+  } // hgroup#place_logo
 
   nav#main_navigation {
     background-color: $base-dark;
@@ -268,7 +274,7 @@
         width: 100%;
       }
 
-      hgroup#virginia_logo {
+      hgroup#place_logo {
         background-size: 50px 50px;
         height: 50px;
         padding-left: 0;
@@ -288,7 +294,7 @@
           letter-spacing: 0.5em;
           margin: -5px 0 0 120px;
         }
-      } // hgroup#virginia_logo
+      } // hgroup#place_logo
 
       section#search {
         margin-top: 0;
