--- a/htdocs/static/scss/areas/_breadcrumbs.scss
+++ b/htdocs/static/scss/areas/_breadcrumbs.scss
@@ -1,49 +1,71 @@
 // Function Specific Mixins
 // ------------------------------------------------------------------
 
-@mixin wizard-step($bgColor, $shadowTone) {
-  color: $white;
-  text-shadow: 0 1px 0 darken($bgColor, $shadowTone);
-  background-color: $bgColor;
+$top-bottom-width: 12px;
+$side-width: 24px;
 
-  &:before {
-    border-top-color: $bgColor;
-    border-bottom-color: $bgColor;
-  }
+nav.prevnext {
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+  margin: 0 0 0.5em 0;
+  padding: 0.25em 0;
 
-  &:after {
-    border-left-color: $bgColor;
-  }
-} // @mixin wizard-step
-
-@mixin wizard-step-group($bgColor) {
-  a {
-    @include wizard-step($bgColor, 15%);
-  }
-
-  &:hover a {
-    @include wizard-step(darken($bgColor, 20%), 20%);
-  }
-} // @mixin wizard-step-group
-
-
-
-section.breadcrumbs {
-  @extend %clearfix;
-  clear: both;
-  margin-bottom: 20px;
-} // section#progress-bar
-
-.steps-nav {
-  clear: both;
-  position: relative;
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-  width: 100%;
-  li {
+  ul {
+    list-style-type: none;
+    margin: 0;
+    overflow: hidden;
     padding: 0;
-    position: relative;
+
+    li {
+      font-size: 0.8em;
+      display: inline-block;
+      list-style-type: none;
+      line-height: 1.2em;
+      margin: 0;
+      padding: 0.25em 0.75em;
+      vertical-align: top;
+      width: 49%;
+
+      a {
+        text-decoration: none;
+      }
+
+      span {
+        display: block;
+        font-size: 0.8em;
+        text-transform: uppercase;
+      }
+
+      &:first-child {
+        border-right: 1px solid #eee;
+        text-align: left;
+      }
+
+      &:nth-child(2) {
+        float: right;
+        text-align: right;
+      }
+    }
+  }
+
+  @include respond-to(print) {
+    display: none;
+  }
+}
+
+.breadcrumbs ul {
+  list-style: none;
+  margin: 0 0 1em;
+  overflow: hidden;
+  font: 18px Helvetica, Arial, Sans-Serif;
+  @include clearfix;
+
+  @include respond-to(print) {
+    margin: 0;
+    padding: 0;
+  }
+
+  li {
     float: left;
 
     @include respond-to(print) {
@@ -53,43 +75,87 @@ section.breadcrumbs {
     }
 
     a {
-      position: relative;
-      display: inline-block;
       font-size: 12px;
       height: $base-line-height;
       line-height: $base-line-height;
-      margin-right: 20px;
-      padding: 0 5px;
-      color: $white !important;
-      background-color: $base-lightest;
+      color: $white;
       text-decoration: none;
-      span {
-        font-weight: bold;
-      }
-      &:before, &:after {
+      padding: 0px 0 0px (5+$side-width);
+      background: $base-lightest;
+      position: relative;
+      display: block;
+      float: left;
+      &:before {
+        content: " ";
+        display: block;
         width: 0;
         height: 0;
+        border-top: $top-bottom-width solid transparent;
+        border-bottom: $top-bottom-width solid transparent;
+        border-left: $side-width solid $white;
         position: absolute;
-        content: "";
-        top: 0;
-        border: $base-line-height / 2 solid $base-lightest;
-        border-right-width: 0;
-      }
-      &:before {
-        border-left: $base-line-height solid transparent;
-        left: -$base-line-height;
+        margin-left: 1px;
+        left: 100%;
+        z-index: 1;
+
+        @include respond-to(print) {
+          border: none;
+          clear: both;
+          float: none;
+        }
+
       }
       &:after {
-        border-color: transparent;
-        border-left: $base-line-height  solid $base-lightest;
-        right: -$base-line-height;
+        content: " ";
+        display: block;
+        width: 0;
+        height: 0;
+        border-top: $top-bottom-width solid transparent;
+        border-bottom: $top-bottom-width solid transparent;
+        border-left: $side-width solid $base-lightest;
+        position: absolute;
+        top: 0;
+
+        left: 100%;
+        z-index: 2;
+
+        @include respond-to(print) {
+          border: none;
+        }
       }
-    } // a
-    &:first-child a:before {
-      border-left: none;
+      &:hover {
+        background: darken($base-lightest, 20%);
+      }
+      &:hover:after {
+        border-left-color: darken($base-lightest, 20%);
+      }
     }
-    &.active {
-      @include wizard-step-group($base-darkest);
+    &:first-child a {
+      padding-left: 5px;
     }
-  } // li
-} // .steps-nav
+    &:last-child a {
+      background: $base-darkest;
+      &:after {
+        border-top: $top-bottom-width solid transparent;           /* Go big on the size, and let overflow hide */
+        border-bottom: $top-bottom-width solid transparent;
+        border-left: $side-width solid $base-darkest;
+
+        @include respond-to(print) {
+          border: none;
+          clear: both;
+          float: none;
+        }
+
+      }
+    }
+  }
+}
+
+.paging {
+  .prev,
+  .next {
+    @include respond-to(print) {
+      display: none;
+    }
+  }
+}
