--- a/htdocs/static/scss/areas/_page-law-show.scss
+++ b/htdocs/static/scss/areas/_page-law-show.scss
@@ -1,4 +1,5 @@
-/* ################################################################################
+/*
+################################################################################
 # Law page
 ################################################################################
 */
@@ -6,11 +7,30 @@
 .law {
   section#main_content {
     overflow: hidden;
+    padding-bottom: 150px; // Footer fixed hack
+
+    @include respond-to(print) {
+      padding-bottom: 0;
+    }
   }
 
-  #main_content heading {
+  .nest {
+    @extend .wide;
+
+    @include respond-to(print) {
+      margin: 0 0 0 0.25in;
+      padding: 0;
+      width: 7in;
+    }
+  }
+
+  #main_content header {
     display: block;
     padding: 20px;
+
+    @include respond-to(print) {
+      padding: 0;
+    }
   }
 
   .primary-content {
@@ -51,8 +71,38 @@
       text-transform: uppercase;
     }
 
+    // This function that follows allows for the indentation up to 9 levels deep
+    // To increase the number of levels, one can add to the @while $num
+    // statement but really, 9 levels of indentation? Go smack the legislator
+    // that wrote that. You can also change your indent depth globally with the
+    // $indent variable.
+    section {
+
+      $num: 1;
+      $indent: 1em;
+
+      &.indent {
+        margin-left: $indent; /* 16px */
+      }
+
+      @while $num < 9 {
+
+        &.indent-#{$num} {
+          margin-left: $num * $indent;
+        } // &-#{num}
+        $num: $num +1;
+      } // @while
+    }
+
     p {
       margin: 0 0 1.25em 0;
+    }
+
+    pre.table {
+      margin: 0 0 20px 0;
+      font-size: .75em;
+      overflow-x: scroll;
+      white-space: pre;
     }
 
   }
@@ -65,6 +115,12 @@
 
     @include respond-to(smartphone) {
       float: none;
+      width: 100%;
+    }
+
+    @include respond-to(print) {
+      float: none;
+      padding: 0;
       width: 100%;
     }
 
@@ -244,6 +300,19 @@
           }
         } // article.court-decision
 
+      }
+
+    }
+
+    p.keyboard {
+      font-family: $statedecoded-stack3;
+      font-size: 0.9em;
+      text-transform: uppercase;
+
+      a#keyhelp {
+        @include respond-to(print) {
+          display: none;
+        }
       }
     }
 
