--- a/htdocs/static/scss/base/_default.scss
+++ b/htdocs/static/scss/base/_default.scss
@@ -7,9 +7,24 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+
+  @include respond-to(print) {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+  }
+}
+
 html {
   text-align: center;
-  body {
+}
+body {
     background-color: $site-background-color;
     color: $text-color;
     font-family: $statedecoded-stack2;
@@ -17,116 +32,131 @@ html {
     line-height: $base-line-height;
     margin: auto;
     min-height: 100%;
-    padding: 0;
     text-align: left;
     &.preload * {
       transition: none !important;
     }
-    p {
-      font-size: $base-font-size;
-      line-height: $base-line-height;
+
+    @include respond-to(print) {
+      background-color: white;
+      color: #000;
     }
-    h1, h2, h3 {
-      clear: both;
-      color: $headings-font-color;
-      font-family: $headings-font-family;
-      font-weight: $headings-font-weight;
-    } // h1, h2, h3
-    h4, h5, h6 {
-      color: $subheadings-font-color;
-      font-family: $subheadings-font-family;
-      font-weight: $subheadings-font-weight;
-    } // h4, h5, h6
-    a, a:link {
-        color: $link-color;
-    } // a, a:link;
-    a:hover {
-        color: $link-color-hover;
-    } // a:hover;
-    a:active {
-        color: $link-color-active;
-    } // a:active;
-    a:visited {
-        color: $link-color-visited;
-    } //  a:visited
-    nav {
-    }
+}
+p {
+  font-size: $base-font-size;
+  hyphenate: auto;
+  hyphenate-lines: 3;
+  hyphenate-before: 2;
+  hyphenate-after: 3;
+  line-height: $base-line-height;
+  widows: 4;
+  orphans: 4;
+}
 
-    ::-moz-selection {
-        background-color: $link-color;
-        color: $white;
-        text-shadow: none;
-    }
+.section {
+  page-break-after: auto;
+}
 
-    ::selection {
-        background-color: $link-color;
-        color: $white;
-        text-shadow: none;
-    }
+h1, h2, h3 {
+  color: $headings-font-color;
+  font-family: $headings-font-family;
+  font-weight: $headings-font-weight;
+  page-break-before: auto;
+  page-break-inside: never;
+} // h1, h2, h3
+h4, h5, h6 {
+  color: $subheadings-font-color;
+  font-family: $subheadings-font-family;
+  font-weight: $subheadings-font-weight;
+  page-break-before: auto;
+  page-break-inside: never;
+} // h4, h5, h6
+a, a:link {
+	color: $link-color;
+} // a, a:link;
+a:hover {
+	color: $link-color-hover;
+} // a:hover;
+a:active {
+	color: $link-color-active;
+} // a:active;
+a:visited {
+	color: $link-color-visited;
+} //  a:visited
+nav {
+}
 
-    hr {
-      border: 0;
-      border-bottom: 1px solid $white;
-      border-top: 1px solid $gray-lightest;
-      margin: $base-line-height 0;
-    }
+::-moz-selection {
+	background-color: $link-color;
+	color: $white;
+	text-shadow: none;
+}
 
-    // Remove the gap between images and the bottom of their containers: h5bp.com/i/440
-    img {
-        vertical-align: middle;
-    }
+::selection {
+	background-color: $link-color;
+	color: $white;
+	text-shadow: none;
+}
 
-    // Remove default fieldset styles.
-    fieldset {
-        border: 0;
-        margin: 0;
-        padding: 0;
-    }
+hr {
+  border: 0;
+  border-bottom: 1px solid $white;
+  border-top: 1px solid $gray-lightest;
+  margin: $base-line-height 0;
+}
 
-    // Allow only vertical resizing of textareas
-    textarea {
-        resize: vertical;
-    }
+// Remove the gap between images and the bottom of their containers: h5bp.com/i/440
+img {
+	vertical-align: middle;
+}
 
-    #main_content {
-      padding: 20px 0;
-      @include respond-to(smartphone) {
-        padding: 0 10px;
-      }
-    }
+// Remove default fieldset styles.
+fieldset {
+	border: 0;
+	margin: 0;
+	padding: 0;
+}
 
-    // Unordered and Ordered - <ol> & <ul>
-    // ------------------------------------------------------------------
+// Allow only vertical resizing of textareas
+textarea {
+	resize: vertical;
+}
 
-    ul, ol {
-      padding: 0;
-      margin: 0 0 $base-line-height / 2 25px;
-      ul, ol {
-         margin-bottom: 0;
-      }
-    }
+#main_content {
+  padding: 20px 0;
+  @include respond-to(smartphone) {
+	padding: 0 10px;
+  }
+}
 
-    ul {
-      list-style: disc;
-    }
+// Unordered and Ordered - <ol> & <ul>
+// ------------------------------------------------------------------
 
-    ol, ol ol ol ol, ol ol ol ol ol ol ol {
-      list-style: decimal;
-      ol{
-        list-style-type: lower-alpha;
-        ol  {
-          list-style-type: lower-roman;
-        }
-      }
-    }
+ul, ol {
+  padding: 0;
+  margin: 0 0 $base-line-height / 2 25px;
+  ul, ol {
+	 margin-bottom: 0;
+  }
+}
 
-    li {
-      line-height: $base-line-height;
-    }
+ul {
+  list-style: disc;
+}
 
+ol, ol ol ol ol, ol ol ol ol ol ol ol {
+  list-style: decimal;
+  ol{
+	list-style-type: lower-alpha;
+	ol  {
+	  list-style-type: lower-roman;
+	}
+  }
+}
 
-  } // body
-} // html
+li {
+  line-height: $base-line-height;
+}
 
 // Chrome Frame prompt
 
@@ -137,10 +167,21 @@ html {
     padding: 0.2em 0;
 }
 
-
 .nest {
   margin: auto;
   position: relative;
+}
+
+.wide {
+    max-width: none;
+    padding: 0 40px;
+    width: 100%;
+    @include respond-to(smartphone) {
+      padding: 0;
+    }
+}
+
+.narrow {
   max-width: 960px;
 }
 
