--- a/htdocs/static/scss/areas/_page-law-show.scss
+++ b/htdocs/static/scss/areas/_page-law-show.scss
@@ -104,6 +104,10 @@
       overflow-x: scroll;
       white-space: pre;
     }
+    
+    span.dictionary {
+      border-bottom: 1px dotted #558fae;
+    }
 
   }
 
